@@ -27,7 +27,7 @@ import com.google.common.base.Predicates;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
-import com.google.errorprone.annotations.CanIgnoreReturnValue;
+import com.google.common.collect.Sets;
 import java.io.PrintStream;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -60,6 +60,7 @@ import org.sosy_lab.cpachecker.core.reachedset.UnmodifiableReachedSet;
 import org.sosy_lab.cpachecker.cpa.arg.ARGCPA;
 import org.sosy_lab.cpachecker.cpa.arg.ARGReachedSet;
 import org.sosy_lab.cpachecker.cpa.arg.ARGState;
+import org.sosy_lab.cpachecker.cpa.arg.ARGUtils;
 import org.sosy_lab.cpachecker.cpa.arg.path.ARGPath;
 import org.sosy_lab.cpachecker.cpa.arg.path.PathIterator;
 import org.sosy_lab.cpachecker.cpa.composite.CompositeCPA;
@@ -109,6 +110,18 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
             + " location. Always set this to `true` if you use SlicingDelegatingRefiner."
   )
   private boolean takeEagerSlice = true;
+
+  @Option(secure = true, description = "What kind of restart to do after a successful refinement")
+  private RestartStrategy restartStrategy = RestartStrategy.PIVOT;
+
+  private enum RestartStrategy {
+    /**
+     * Restart at the pivot element, i.e., the first abstract state for which the precision changes.
+     */
+    PIVOT,
+    /** Restart at the root, i.e., the initial abstract state. * */
+    ROOT
+  }
 
   private final PathExtractor pathExtractor;
   private final ARGCPA argCpa;
@@ -199,24 +212,20 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
 
   @Override
   public boolean performRefinement(ReachedSet pReached) throws CPAException, InterruptedException {
-    ARGReachedSet argReached = new ARGReachedSet(pReached, argCpa, refinementCount);
-
-    Collection<ARGState> targetStates = pathExtractor.getTargetStates(argReached);
-    List<ARGPath> targetPaths = pathExtractor.getTargetPaths(targetStates);
     boolean anyFeasible = false;
-    for (ARGPath tp : targetPaths) {
+
+    for (ARGPath tp : getTargetPaths(pReached)) {
       int targetPathId = obtainTargetPathId(tp);
       if (previousTargetPaths.contains(targetPathId)) {
         throw new RefinementFailedException(Reason.RepeatedCounterexample, tp);
       }
-
-      CounterexampleInfo cex = isFeasible(tp, pReached);
-
-      if (cex.isSpurious()) {
-        previousTargetPaths.add(targetPathId);
-      } else {
+      if (isFeasible(tp)) {
+        CounterexampleInfo cex = getCounterexample(tp);
         tp.getLastState().addCounterexampleInformation(cex);
         anyFeasible = true;
+      } else {
+
+        previousTargetPaths.add(targetPathId);
       }
     }
 
@@ -226,6 +235,19 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
       updatePrecisionAndRemoveSubtree(pReached);
       return true;
     }
+  }
+
+  CounterexampleInfo getCounterexample(ARGPath pTargetPath) {
+    return CounterexampleInfo.feasibleImprecise(pTargetPath);
+  }
+
+  Collection<ARGPath> getTargetPaths(ReachedSet pReached) throws RefinementFailedException {
+    ARGReachedSet argReached = new ARGReachedSet(pReached, argCpa, refinementCount);
+
+    Collection<ARGState> targetStates = pathExtractor.getTargetStates(argReached);
+    List<ARGPath> targetPaths = pathExtractor.getTargetPaths(targetStates);
+
+    return targetPaths;
   }
 
   private int obtainTargetPathId(final ARGPath pTargetPath) {
@@ -242,8 +264,7 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
    * @throws CPAException if the wrapped transfer relation throws an Exception during the check
    * @throws InterruptedException if feasibility check got interrupted
    */
-  CounterexampleInfo isFeasible(final ARGPath pTargetPath, final ReachedSet pReached)
-      throws CPAException, InterruptedException {
+  boolean isFeasible(final ARGPath pTargetPath) throws CPAException, InterruptedException {
 
     PathIterator iterator = pTargetPath.fullPathIterator();
     CFAEdge outgoingEdge;
@@ -251,10 +272,17 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
     AbstractState state = initialState;
     Precision precision;
     if (counterexampleCheckOnSlice) {
-      Precision fullSlice = getNewPrecision(pReached).getSecond();
+      Set<CFAEdge> sliceForTargetPath = getSlice(pTargetPath);
+      SlicingPrecision fullSlicingPrecision =
+          Precisions.extractPrecisionByType(fullPrecision, SlicingPrecision.class);
+      assert fullSlicingPrecision != null
+          : "No " + SlicingPrecision.class.getSimpleName() + " in precision: " + fullPrecision;
+
+      SlicingPrecision targetPathSlice =
+          new SlicingPrecision(fullSlicingPrecision.getWrappedPrec(), sliceForTargetPath);
       precision =
           currentPrecision.replaceWrappedPrecision(
-              fullSlice, Predicates.instanceOf(fullSlice.getClass()));
+              targetPathSlice, Predicates.instanceOf(SlicingPrecision.class));
     } else {
       precision = fullPrecision;
     }
@@ -268,14 +296,14 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
           // Thus, there is no way that any initial precision could change, either way.
           successorSet = transfer.getAbstractSuccessorsForEdge(state, precision, outgoingEdge);
           if (successorSet.isEmpty()) {
-            return CounterexampleInfo.spurious();
+            return false;
           }
           // extract singleton successor state
           state = Iterables.get(successorSet, 0);
           iterator.advance();
         } while (!iterator.isPositionWithState());
       }
-      return CounterexampleInfo.feasibleImprecise(pTargetPath);
+      return true;
     } catch (CPATransferException e) {
       throw new CPAException(
           "Computation of successor failed for checking path: " + e.getMessage(), e);
@@ -296,78 +324,101 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
    * @throws RefinementFailedException thrown if the given reached set does not contain target paths
    *     valid for refinement
    */
-  @CanIgnoreReturnValue
-  Set<ARGState> updatePrecision(final ReachedSet pReached)
+  Set<Pair<ARGState, SlicingPrecision>> computeNewPrecision(final ReachedSet pReached)
       throws RefinementFailedException, InterruptedException {
-    Pair<Set<ARGState>, SlicingPrecision> refinementRootsAndPrecision = getNewPrecision(pReached);
-    Precision newPrec = refinementRootsAndPrecision.getSecond();
-    ARGReachedSet argReached = new ARGReachedSet(pReached, argCpa, refinementCount);
-    argReached.updatePrecisionGlobally(newPrec, Predicates.instanceOf(SlicingPrecision.class));
+    Set<Pair<ARGState, SlicingPrecision>> refinementRootsAndPrecision = getNewPrecision(pReached);
     refinementCount++;
-    return refinementRootsAndPrecision.getFirst();
+    return refinementRootsAndPrecision;
   }
 
-  private Pair<Set<ARGState>, SlicingPrecision> getNewPrecision(final ReachedSet pReached)
+  private Set<Pair<ARGState, SlicingPrecision>> getNewPrecision(final ReachedSet pReached)
       throws RefinementFailedException, InterruptedException {
     ARGReachedSet argReached = new ARGReachedSet(pReached, argCpa, refinementCount);
-    SlicingPrecision oldPrec = extractSlicingPrecision(pReached, pReached.getFirstState());
 
     Collection<ARGState> targetStates = pathExtractor.getTargetStates(argReached);
     Collection<ARGPath> targetPaths = pathExtractor.getTargetPaths(targetStates);
-    Set<CFAEdge> relevantEdges = new HashSet<>();
-    Set<ARGState> refinementRoots = new HashSet<>();
+    Set<Pair<ARGState, SlicingPrecision>> newPrecs = new HashSet<>();
+    for (ARGPath tp : targetPaths) {
+      // we have to add the refinement root even if no new edge was added,
+      // so that the precision of the corresponding ARG subtree is updated
+      Set<CFAEdge> relevantEdges = getSlice(tp);
+      ARGState refinementRoot = getRefinementRoot(tp, relevantEdges);
+      SlicingPrecision oldPrec = mergeOnSubgraph(refinementRoot, pReached);
+      SlicingPrecision newPrec = oldPrec.getNew(oldPrec.getWrappedPrec(), relevantEdges);
+      newPrecs.add(Pair.of(refinementRoot, newPrec));
+    }
+
+    return newPrecs;
+  }
+
+  private Set<CFAEdge> getSlice(ARGPath pPath) throws InterruptedException {
     int candidateSlices = 0;
     int realSlices = 0;
     try {
-      for (ARGPath tp : targetPaths) {
-        List<CFAEdge> innerEdges = tp.getInnerEdges();
-        List<CFAEdge> criteriaEdges = new ArrayList<>(1);
+      Set<CFAEdge> relevantEdges = new HashSet<>();
+      List<CFAEdge> innerEdges = pPath.getInnerEdges();
+      List<CFAEdge> criteriaEdges = new ArrayList<>(1);
 
-        if (takeEagerSlice) {
-          criteriaEdges =
-              innerEdges
-                  .stream()
-                  .filter(Predicates.instanceOf(CAssumeEdge.class))
-                  .collect(Collectors.toList());
-        }
-        CFANode finalNode = AbstractStates.extractLocation(tp.getLastState());
-        List<CFAEdge> edgesToTarget =
-            CFAUtils.enteringEdges(finalNode).filter(innerEdges::contains).toList();
-        criteriaEdges.addAll(edgesToTarget);
+      if (takeEagerSlice) {
+        criteriaEdges =
+            innerEdges
+                .stream()
+                .filter(Predicates.instanceOf(CAssumeEdge.class))
+                .collect(Collectors.toList());
+      }
+      CFANode finalNode = AbstractStates.extractLocation(pPath.getLastState());
+      List<CFAEdge> edgesToTarget =
+          CFAUtils.enteringEdges(finalNode).filter(innerEdges::contains).toList();
+      criteriaEdges.addAll(edgesToTarget);
 
-        // Heuristic: Reverse to make states that are deeper in the path first - these
-        // have a higher chance of including earlier states in their dependences
-        criteriaEdges = Lists.reverse(criteriaEdges);
+      // Heuristic: Reverse to make states that are deeper in the path first - these
+      // have a higher chance of including earlier states in their dependences
+      criteriaEdges = Lists.reverse(criteriaEdges);
 
-        for (CFAEdge e : criteriaEdges) {
-          candidateSlices++;
-          // If the relevant edges contain e, then all dependences of e are also already included
-          // and we can skip it (this is only true as long as no function call/return edge is a
-          // criterion!)
-          if (!relevantEdges.contains(e)) {
-            realSlices++;
-            Collection<CFAEdge> slice = getSlice(e);
-            refinementRoots.add(getRefinementRoot(tp, slice));
-            relevantEdges.addAll(slice);
-          }
+      for (CFAEdge e : criteriaEdges) {
+        candidateSlices++;
+        // If the relevant edges contain e, then all dependences of e are also already included
+        // and we can skip it (this is only true as long as no function call/return edge is a
+        // criterion!)
+        if (!relevantEdges.contains(e)) {
+          realSlices++;
+          Collection<CFAEdge> slice = getSlice(e);
+          relevantEdges.addAll(slice);
         }
       }
+      return relevantEdges;
     } finally {
       candidateSliceCount.setNextValue(candidateSlices);
       sliceCount.setNextValue(realSlices);
     }
+  }
 
-    SlicingPrecision newPrec = oldPrec.getNew(oldPrec.getWrappedPrec(), relevantEdges);
-    return Pair.of(refinementRoots, newPrec);
+  private SlicingPrecision mergeOnSubgraph(
+      final ARGState pRefinementRoot, final ReachedSet pReached) {
+    // get all unique precisions from the subtree
+    Set<SlicingPrecision> uniquePrecisions = Sets.newIdentityHashSet();
+    for (ARGState descendant : ARGUtils.getNonCoveredStatesInSubgraph(pRefinementRoot)) {
+      uniquePrecisions.add(extractSlicingPrecision(pReached, descendant));
+    }
+
+    // join all unique precisions into a single precision
+    SlicingPrecision start = Iterables.getLast(uniquePrecisions);
+    Set<CFAEdge> allRelevant = new HashSet<>(start.getRelevant());
+    for (SlicingPrecision precision : uniquePrecisions) {
+      allRelevant.addAll(precision.getRelevant());
+    }
+
+    return new SlicingPrecision(start.getWrappedPrec(), allRelevant);
   }
 
   private void updatePrecisionAndRemoveSubtree(final ReachedSet pReached)
       throws RefinementFailedException, InterruptedException {
     ARGReachedSet argReached = new ARGReachedSet(pReached, argCpa, refinementCount);
-    Set<ARGState> refinementRoots = updatePrecision(pReached);
-    for (ARGState r : refinementRoots) {
+    Set<Pair<ARGState, SlicingPrecision>> refRootsAndPrecision = computeNewPrecision(pReached);
+    for (Pair<ARGState, SlicingPrecision> p : refRootsAndPrecision) {
+      ARGState r = p.getFirst();
       if (!r.isDestroyed()) {
-        argReached.removeSubtree(r);
+        argReached.removeSubtree(r, p.getSecond(), Predicates.instanceOf(SlicingPrecision.class));
       }
     }
   }
@@ -383,14 +434,22 @@ public class SlicingRefiner implements Refiner, StatisticsProvider {
   }
 
   private ARGState getRefinementRoot(final ARGPath pPath, final Collection<CFAEdge> relevantEdges) {
-    PathIterator iterator = pPath.fullPathIterator();
-    while (iterator.hasNext()) {
-      if (relevantEdges.contains(iterator.getOutgoingEdge())) {
-        return iterator.getNextAbstractState();
-      }
-      iterator.advance();
+    switch (restartStrategy) {
+      case PIVOT:
+        PathIterator iterator = pPath.fullPathIterator();
+        while (iterator.hasNext()) {
+          if (relevantEdges.contains(iterator.getOutgoingEdge())) {
+            return iterator.getNextAbstractState();
+          }
+          iterator.advance();
+        }
+        throw new AssertionError("Infeasible target path has empty program slice");
+      case ROOT:
+        // use first state after ARG root as refinement root
+        return pPath.asStatesList().get(1);
+      default:
+        throw new AssertionError("Unhandled restart strategy: " + restartStrategy);
     }
-    throw new AssertionError("Infeasible target path has empty program slice");
   }
 
   private static SlicingPrecision extractSlicingPrecision(
